--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -23,7 +23,7 @@
 
             <!-- Links -->
             <div class="mb-3">
-                <a class="btn btn-outline-primary btn-sm" href="add-order">Add order</a>
+                <a class="btn btn-outline-primary btn-sm" href="new-order">New order</a>
                 <a class="btn btn-outline-primary btn-sm" href="/orders/service-types/view">Service types</a>
                 <a class="btn btn-outline-primary btn-sm" href="/orders/dimensions/view">Dimensions</a>
             </div>
