--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -28,8 +28,8 @@
       <div class="mb-3">
         <form action="#" th:action="@{save-role}" th:object="${role}" method="post">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="New role name" th:field="*{name}">
-            <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-plus"></i> Add</button>
+            <input type="text" class="form-control" placeholder="New role" th:field="*{name}" required>
+            <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-floppy-disk"></i> Save</button>
           </div>
         </form>
       </div>
@@ -68,7 +68,7 @@
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         <button class="btn btn-primary" type="submit"
-                                th:attr="onClick=|submitForm('role-${role.roleId}-update-form')|">Update</button>
+                                th:attr="onClick=|submitForm('role-${role.roleId}-update-form')|">Save</button>
                       </div>
                     </div>
                   </div>
