--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -23,11 +23,11 @@
       <div class="col-lg-8 border p-3">
 
         <!-- Main header -->
-        <div><h2 class="text-center mb-3">Save employee</h2></div>
+        <div><h2 class="text-center mb-3">New employee</h2></div>
 
         <!-- Form -->
         <div th:replace="~{frags/emp-frags.html :: emp-save-form(isAccountAllowed='true', isBtnSAllowed='true',
-                  actionLink='save-employee')}"></div>
+                  actionLink='save-employee', actionBtnName='Save')}"></div>
       </div>
     </div>
   </main>
