--- a/src/main/resources/templates/order/dimensions/dimensions.html
+++ b/src/main/resources/templates/order/dimensions/dimensions.html
@@ -28,8 +28,8 @@
             <div>
                 <form action="#" th:action="@{save-dimensions}" th:object="${dimensionsObj}" method="post">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="New dimension" th:field="*{name}">
-                        <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-plus"></i> Add</button>
+                        <input type="text" class="form-control" placeholder="New dimension" th:field="*{name}" required>
+                        <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-floppy-disk"></i> Save</button>
                         <p th:if="${#fields.hasErrors('name')}" th:errorclass="error" th:errors="*{name}"></p>
                     </div>
                     <div class="form-text">Dimensions format: 1920 x 1080 px</div>
@@ -72,7 +72,7 @@
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                                 <button class="btn btn-primary" type="submit"
-                                                        th:attr="onClick=|submitForm('dimensions-${dimension.id}-update-form')|">Update</button>
+                                                        th:attr="onClick=|submitForm('dimensions-${dimension.id}-update-form')|">Save</button>
                                             </div>
                                         </div>
                                     </div>
