--- a/src/main/resources/templates/order/service-type/service-type.html
+++ b/src/main/resources/templates/order/service-type/service-type.html
@@ -28,8 +28,8 @@
       <div class="mb-3">
         <form action="#" th:action="@{save-service-type}" th:object="${serviceType}" method="post">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="New service type" th:field="*{name}">
-            <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-plus"></i> Add</button>
+            <input type="text" class="form-control" placeholder="New service type" th:field="*{name}" required>
+            <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-floppy-disk"></i> Save</button>
             <p th:if="${#fields.hasErrors('name')}" th:errorclass="error" th:errors="*{name}"></p>
           </div>
         </form>
@@ -71,7 +71,7 @@
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                       <button class="btn btn-primary" type="submit"
-                              th:attr="onClick=|submitForm('service-type-${serviceType.id}-update-form')|">Update</button>
+                              th:attr="onClick=|submitForm('service-type-${serviceType.id}-update-form')|">Save</button>
                     </div>
                   </div>
                 </div>
