Added relevant button names and icons for employee

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -51,9 +51,9 @@
                         <td>
                             <div class="dropdown" style="display:inline-block">
                                 <button class="btn btn-success btn-sm dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-expanded="false"><i class="fa-solid fa-pen-to-square"></i> Update</button>
+                                        aria-expanded="false"><i class="fa-solid fa-pen-to-square"></i> Edit</button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" th:href="@{|update-employee?id=${emp.employeeId}|}">Update info</a></li>
+                                    <li><a class="dropdown-item" th:href="@{|update-employee?id=${emp.employeeId}|}">Edit info</a></li>
                                     <li><a class="dropdown-item" th:href="@{|update-emp-account?id=${emp.employeeId}|}">
                                         Create/Update account</a></li>
                                 </ul>
