--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -46,7 +46,7 @@
                   <!-- Role update modal trigger button -->
                   <button class="btn btn-outline-success" data-bs-toggle="modal" type="button"
                           th:attr="data-bs-target=|#role-${role.roleId}-update-modal|">
-                    <i class="fa-solid fa-pen-to-square"></i> Update</button>
+                    <i class="fa-solid fa-pen-to-square"></i> Edit</button>
                   <button class="btn btn-outline-danger"
                           th:attr="onclick=|confirmDelete('delete-role?id=${role.roleId}')|">
                     <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
