--- a/src/main/resources/templates/employee/save-emp-account.html
+++ b/src/main/resources/templates/employee/save-emp-account.html
@@ -45,7 +45,7 @@
                         <!-- Save and Cancel -->
                         <div>
                             <button class="btn btn-outline-primary" type="submit">
-                                <i class="fa-solid fa-floppy-disk"></i> Create/Update</button>
+                                <i class="fa-solid fa-file-pen"></i> Create/Update</button>
                             <a class="btn btn-outline-danger" href="view"><i class="fa-solid fa-ban"></i> Cancel</a>
                         </div>
                     </form>
