Added relevant button names and icons for order and its child

--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -57,7 +57,7 @@
                   <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h1 class="modal-title fs-5">Update role</h1>
+                        <h1 class="modal-title fs-5">Edit role</h1>
                       </div>
                       <div class="modal-body">
                         <form th:id="role-+${role.roleId}+-update-form" action="#" th:action="@{save-role}" method="post">
