--- a/src/main/resources/templates/order/dimensions/dimensions.html
+++ b/src/main/resources/templates/order/dimensions/dimensions.html
@@ -48,7 +48,7 @@
                                     <!-- Dimensions update modal trigger button -->
                                     <button class="btn btn-outline-success" data-bs-toggle="modal" type="button"
                                             th:attr="data-bs-target=|#dimensions-${dimension.id}-update-modal|">
-                                        <i class="fa-solid fa-pen-to-square"></i> Update</button>
+                                        <i class="fa-solid fa-pen-to-square"></i> Edit</button>
                                     <button class="btn btn-outline-danger"
                                             th:attr="onclick=|confirmDelete('delete-dimensions?id=${dimension.id}')|">
                                         <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
@@ -59,7 +59,7 @@
                                     <div class="modal-dialog modal-dialog-centered">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h1 class="modal-title fs-5">Update dimensions</h1>
+                                                <h1 class="modal-title fs-5">Edit dimensions</h1>
                                             </div>
                                             <div class="modal-body">
                                                 <form th:id="dimensions-+${dimension.id}+-update-form" action="#" th:action="@{save-dimensions}"
