--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -255,7 +255,7 @@
                             <td>
                                 <a class="btn btn-success btn-sm" th:href="@{update-order?id={id}(id=${order.orderId})}"
                                    th:if="${order.orderStatus == 'PENDING'}" title="Update">
-                                    <i class="fa-solid fa-pen-to-square"></i> Update</a>
+                                    <i class="fa-solid fa-pen-to-square"></i> Edit</a>
                                 <a class="btn btn-danger btn-sm" th:if="${order.orderStatus == 'PENDING'}"
                                    th:href="@{cancel-order?id={id}(id=${order.orderId})}" title="Cancel">
                                     <i class="fa-solid fa-ban"></i> Cancel</a>
