--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -102,7 +102,7 @@
                 <button class="btn btn-outline-primary" th:if="${order.orderId == null}" type="submit">
                   <i class="fa-solid fa-floppy-disk"></i> Save</button>
                 <button class="btn btn-outline-success" th:if="${order.orderId != null}" type="submit">
-                  <i class="fa-solid fa-pen-to-square"></i> Update</button>
+                  <i class="fa-solid fa-file-pen"></i> Update</button>
                 <a class="btn btn-outline-danger" href="pending"><i class="fa-solid fa-ban"></i> Cancel</a>
               </div>
             </form>
