--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -57,7 +57,7 @@
                         th:attr="style='display:' + ${(search == null || #strings.isEmpty(search)) ? 'none': 'block'}"
                         onclick="clearSearch()">
                             <i class="fa-solid fa-xmark"></i></button>
-                        <button class="btn btn-outline-primary" value="Search">
+                        <button class="btn btn-outline-primary" type="submit" value="Search">
                             <i class="fa-solid fa-magnifying-glass"></i> Search
                         </button>
                     </div>
