--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -16,7 +16,7 @@
         <!-- Navbar -->
         <nav class="container-lg navbar navbar-expand-lg bg-body-tertiary mb-3" th:fragment="navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Top</a>
+                <a class="navbar-brand" href="/orders/pending">Top</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
