Fixed search clear button not functioning properly

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -48,18 +48,18 @@
 
             <!-- Search -->
             <div class="col-sm-4">
-                <form>
+                <form id="search-form">
                     <div class="input-group mb-3">
                         <input id="search-field" class="form-control border border-primary" type="text" name="search"
                                th:attr="value=${search != null ? search : ''}"
-                        placeholder="Search orders using customer name" autocomplete="on">
+                               placeholder="Search orders using customer name" autocomplete="on">
+                        <a id="clear-btn" class="btn btn-outline-danger"
+                        th:attr="style='display:' + ${(search == null || #strings.isEmpty(search)) ? 'none': 'block'}"
+                        onclick="clearSearch()">
+                            <i class="fa-solid fa-xmark"></i></a>
                         <button class="btn btn-outline-primary" type="submit" value="Search">
                             <i class="fa-solid fa-magnifying-glass"></i> Search
                         </button>
-                        <button id="clear-btn" class="btn btn-outline-danger"
-                        th:attr="style='display:' + ${(search == null || #strings.isEmpty(search)) ? 'none': 'block'}"
-                        onclick="clearSearch()">
-                            <i class="fa-solid fa-xmark"></i></button>
                     </div>
                 </form>
             </div>
@@ -301,6 +301,8 @@
         function clearSearch() {
             let searchField = document.getElementById('search-field');
             searchField.value = '';
+            document.getElementById('clear-btn').style.display = 'none';
+            document.getElementById('search-form').submit();
         }
     </script>
 
