Added popup window for roles in save/update employee and view page

--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -50,6 +50,13 @@
           element.style.display = 'none';
         }
       }
+
+      function popupWindow(url, name) {
+        let params = `scrollbars=no,resizable=no,status=no,location=no,toolbar=no,menubar=no,
+        width=600,height=800,left=200,top=100`;
+
+        window.open(url, name, params);
+      }
   </script>
 
   <!-- Bottom script and js -->
