--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -23,7 +23,8 @@
         <!-- Links -->
         <div class="mb-3">
             <a class="btn btn-outline-primary btn-sm" href="new-employee">New employee</a>
-            <a class="btn btn-outline-primary btn-sm" href="roles/view">Roles</a>
+            <a class="btn btn-outline-primary btn-sm"
+               onclick="popupWindow('http://localhost:8080/employees/roles/view', 'Roles')">Roles</a>
         </div>
 
         <!-- Table -->
@@ -82,6 +83,15 @@
 
     <!-- Footer -->
     <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
+
+    <script>
+        function popupWindow(url, name) {
+            let params = `scrollbars=no,resizable=no,status=no,location=no,toolbar=no,menubar=no,
+            width=600,height=800,left=200,top=100`;
+
+            window.open(url, name, params);
+        }
+    </script>
 
     <!-- Bottom script and js -->
     <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
