--- a/src/main/resources/templates/frags/emp-frags.html
+++ b/src/main/resources/templates/frags/emp-frags.html
@@ -33,7 +33,8 @@
                             th:text="${role.name}"
                     ></option>
                 </select>
-                <a class="btn btn-outline-primary" href="roles/view" role="button">Roles</a>
+                <a class="btn btn-outline-primary"
+                        onclick="popupWindow('http://localhost:8080/employees/roles/view', 'Roles')">Roles</a>
             </div>
         </div>
         <div class="col-md-4">
