--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -33,7 +33,7 @@
                 <thead class="table-light">
                     <tr>
                         <th>Id</th>
-                        <th>FullName</th>
+                        <th>Name</th>
                         <th>Role</th>
                         <th>PhoneNo</th>
                         <th>EmailAddress</th>
@@ -44,7 +44,7 @@
                 <tbody>
                     <tr th:each="emp : ${employees}">
                         <td th:text="${emp.employeeId}"></td>
-                        <td th:text="${emp.fullName}"></td>
+                        <td th:text="${emp.name}"></td>
                         <td th:text="${emp.role.name}"></td>
                         <td th:text="${emp.phoneNo}"></td>
                         <td th:text="${emp.emailAddress}"></td>
