--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -296,7 +296,7 @@
                     Start</a></li>
             <li class="page-item" th:classappend="${currentPage <= 0} ? 'disabled' : ''">
                 <a class="page-link"
-                   th:href="'/orders/' + ${active} + '?' + ${search != null ? '?search_in=' + search_in + '&search=' + search + '&' : ''}
+                   th:href="'/orders/' + ${active} + '?' + ${search != null ? 'search_in=' + search_in + '&search=' + search + '&' : ''}
                  + 'page=' + (${currentPage} - 1)">Previous</a></li>
             <li class="page-item" th:classappend="${#lists.isEmpty(orders)} ? 'disabled' : ''">
                 <a class="page-link"
