--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -19,53 +19,79 @@
 
     <!-- Main -->
     <main class="container-lg">
+        <div class="row g-3">
 
-        <!-- Links -->
-        <div class="mb-3">
-            <a class="btn btn-outline-primary btn-sm" href="new-employee">New employee</a>
-            <a class="btn btn-outline-primary btn-sm"
-               onclick="popupWindow('http://localhost:8080/employees/roles/view', 'Roles')">Roles</a>
-        </div>
+            <!-- Search -->
+            <div class="col-sm-5">
+                <form id="search-form">
+                    <div class="input-group mb-3">
+                        <select class="form-select border border-primary" style="max-width: 10px" name="search_in" onchange="submit()">
+                            <option th:selected="${search_in == 'name'}" value="name">Name</option>
+                            <option th:selected="${search_in == 'phoneNo'}" value="phoneNo">PhoneNo</option>
+                            <option th:selected="${search_in == 'email'}" value="email">Email</option>
+                        </select>
+                        <input id="search-field" class="form-control border border-primary" type="text" name="search"
+                               th:attr="value=${search != null ? search : ''},
+                                   placeholder='Search employee using ' + ${search_in == null ? 'name' : search_in}"
+                               autocomplete="on">
+                        <a id="clear-btn" class="btn btn-outline-danger"
+                           th:attr="style='display:' + ${(search == null || #strings.isEmpty(search)) ? 'none': 'block'}"
+                           onclick="clearSearch()">
+                            <i class="fa-solid fa-xmark"></i></a>
+                        <button class="btn btn-outline-primary" type="submit" value="Search">
+                            <i class="fa-solid fa-magnifying-glass"></i> Search
+                        </button>
+                    </div>
+                </form>
+            </div>
 
-        <!-- Table -->
-        <div class="table-responsive">
-            <table class="table table-hover border">
-                <thead class="table-light">
-                    <tr>
-                        <th>Id</th>
-                        <th>Name</th>
-                        <th>Role</th>
-                        <th>PhoneNo</th>
-                        <th>EmailAddress</th>
-                        <th>Gender</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="emp : ${employees}">
-                        <td th:text="${emp.employeeId}"></td>
-                        <td th:text="${emp.name}"></td>
-                        <td th:text="${emp.role.name}"></td>
-                        <td th:text="${emp.phoneNo}"></td>
-                        <td th:text="${emp.emailAddress}"></td>
-                        <td th:text="${emp.gender}"></td>
-                        <td>
-                            <div class="dropdown" style="display:inline-block">
-                                <button class="btn btn-success btn-sm dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-expanded="false"><i class="fa-solid fa-pen-to-square"></i> Edit</button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" th:href="@{|update-employee?id=${emp.employeeId}|}">Edit info</a></li>
-                                    <li><a class="dropdown-item" th:href="@{|update-emp-account?id=${emp.employeeId}|}">
-                                        Create/Update account</a></li>
-                                </ul>
-                            </div>
-                            <button class="btn btn-danger btn-sm"
-                                    th:attr="onclick=|confirmDelete('delete-employee?id=${emp.employeeId}')|">
-                                <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <!-- Links -->
+            <div class="col-sm-4">
+                <a class="btn btn-outline-primary" href="new-employee">New employee</a>
+                <a class="btn btn-outline-primary"
+                   onclick="popupWindow('http://localhost:8080/employees/roles/view', 'Roles')">Roles</a>
+            </div>
+
+            <!-- Table -->
+            <div class="table-responsive">
+                <table class="table table-hover border">
+                    <thead class="table-light">
+                        <tr>
+                            <th>Id</th>
+                            <th>Name</th>
+                            <th>Role</th>
+                            <th>PhoneNo</th>
+                            <th>EmailAddress</th>
+                            <th>Gender</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="emp : ${employees}">
+                            <td th:text="${emp.employeeId}"></td>
+                            <td th:text="${emp.name}"></td>
+                            <td th:text="${emp.role.name}"></td>
+                            <td th:text="${emp.phoneNo}"></td>
+                            <td th:text="${emp.emailAddress}"></td>
+                            <td th:text="${emp.gender}"></td>
+                            <td>
+                                <div class="dropdown" style="display:inline-block">
+                                    <button class="btn btn-success btn-sm dropdown-toggle" data-bs-toggle="dropdown"
+                                            aria-expanded="false"><i class="fa-solid fa-pen-to-square"></i> Edit</button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" th:href="@{|update-employee?id=${emp.employeeId}|}">Edit info</a></li>
+                                        <li><a class="dropdown-item" th:href="@{|update-emp-account?id=${emp.employeeId}|}">
+                                            Create/Update account</a></li>
+                                    </ul>
+                                </div>
+                                <button class="btn btn-danger btn-sm"
+                                        th:attr="onclick=|confirmDelete('delete-employee?id=${emp.employeeId}')|">
+                                    <i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
 
@@ -73,11 +99,14 @@
     <nav>
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${currentPage <= 0} ? 'disabled' : ''">
-                <a class="page-link" href="view?page=0">Start</a></li>
+                <a class="page-link" th:href="'view' + ${search != null ? '?search_in=' + search_in + '&search=' + search : ''}"
+                >Start</a></li>
             <li class="page-item" th:classappend="${currentPage <= 0} ? 'disabled' : ''">
-                <a class="page-link" th:href="'view?page=' + (${currentPage} - 1)">Previous</a></li>
+                <a class="page-link" th:href="'view?' + ${search != null ? 'search_in=' + search_in + '&search=' + search + '&' : ''}
+                 + 'page=' + (${currentPage} - 1)">Previous</a></li>
             <li class="page-item" th:classappend="${#lists.isEmpty(employees)} ? 'disabled' : ''">
-                <a class="page-link" th:href="'view?page=' + (${currentPage} + 1)">Next</a></li>
+                <a class="page-link" th:href="'view?' + ${search != null ? 'search_in=' + search_in + '&search=' + search + '&' : ''}
+                 + 'page=' + (${currentPage} + 1)">Next</a></li>
         </ul>
     </nav>
 
@@ -85,6 +114,12 @@
     <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
 
     <script>
+        function clearSearch() {
+            let searchField = document.getElementById('search-field');
+            searchField.value = '';
+            document.getElementById('clear-btn').style.display = 'none';
+            document.getElementById('search-form').submit();
+        }
         function popupWindow(url, name) {
             let params = `scrollbars=no,resizable=no,status=no,location=no,toolbar=no,menubar=no,
             width=600,height=800,left=200,top=100`;
